# Example-Module-Python-C-API-Extention

./: .gitignore  CMakeLists.txt  README  custom.c  minimal_requirements.txt  pyproject.toml  requirements.txt  setup.py  test.py
